Implementação: Navbar / Fix: z-index

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -14,17 +14,20 @@
     font-size: 3rem;
     font-weight: 800;
     padding-bottom: 0.3rem;
+    color: #ebebeb;
     margin-left: 20px;
 }
 
 .banner-description {
     margin-left: 20px;
     width: 45rem;
+    max-height: 175px;
     line-height: 1.3;
     padding-top: 1rem;
-    font-size: 0.8rem;
-    max-width: 500px;
+    font-size: 1rem;
+    max-width: 420px;
     height: 80px;
+    color: #ebebeb;
 }
 
 .banner-button {
