--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -23,6 +23,8 @@
     margin: 3px 3px;
     cursor: pointer;
     border-radius: 3px;
+    box-sizing: border-box;
+    border: 3px rgba(255, 255, 255, 0);
 }
 
 .movie-card-lg {
@@ -34,8 +36,9 @@
 }
 
 .movie-card:hover {
-    transform: scale(1.08);
+    transform: scale(1.10);
     border: 3px solid white;
+    transition: border .2s;
 }
 
 .row-header {
